--- a/Proyecto_Swing_Bicicleta_001V/nbproject/project.properties
+++ b/Proyecto_Swing_Bicicleta_001V/nbproject/project.properties
@@ -27,10 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto_Swing_Bicicleta_001V.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\slade\\Downloads\\mysql-connector-java-8.0.27.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.distribuidoraBicicletas.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,8 +61,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.distribuidoraBicicletas=../../../../../../duoc/Desarrollo_software/proyecto_profe/distribuidoraBicicletas-main
-reference.distribuidoraBicicletas.jar=${project.distribuidoraBicicletas}/dist/distribuidoraBicicletas.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
